--- a/src/components/AppDownload/AppDownload.css
+++ b/src/components/AppDownload/AppDownload.css
@@ -5,14 +5,14 @@
 
 .container {
   display: flex;
-  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 90px;
 }
 
 .visual img {
   max-width: 100%;
+  width: 950px;
   height: auto;
 }
 
@@ -24,6 +24,7 @@
 p {
   margin: 10px 0;
   line-height: 1.6;
+  text-align: justify;
 }
 
 .download {
@@ -41,7 +42,6 @@ p {
   display: flex;
   align-items: center;
   font-size: 14px;
-  color: #fff;
   cursor: pointer;
   text-decoration: none;
 }
@@ -49,16 +49,26 @@ p {
 .app-store i {
   font-size: 30px;
   margin-right: 10px;
+  color: white;
 }
 
 .app-store p {
   margin: 0;
   line-height: 1.2;
+  color: white;
 }
 
 .app-store span {
   font-size: 16px;
   line-height: 25px;
+}
+
+@media (max-width: 768px) {
+  .visual img {
+    max-width: 100%;
+    height: auto;
+    width: 1200px;
+  }
 }
 
 @media (max-width: 768px) {
