--- a/src/components/FoodDisplay/FoodDisplay.css
+++ b/src/components/FoodDisplay/FoodDisplay.css
@@ -24,6 +24,7 @@ input[type="search"] {
   padding: 11px 20px;
   width: 400px;
   outline: none;
+  border: 1px solid tomato;
 }
 
 .food-display-search-btn button {
@@ -31,6 +32,6 @@ input[type="search"] {
   padding: 10px 20px;
   color: white;
   background-color: rgb(225, 76, 49);
-  border: 1px solid rgb(225, 76, 49);
+  border: 2px solid rgb(225, 76, 49);
   /* border-radius: 20px; */
 }
