--- a/src/components/LoginPopup/LoginPopup.css
+++ b/src/components/LoginPopup/LoginPopup.css
@@ -5,6 +5,7 @@
   height: 100%;
   background-color: #00000090;
   display: grid;
+  margin-top: -57px;
 }
 
 .login-popup-container {
@@ -71,4 +72,11 @@
   color: tomato;
   font-weight: 500;
   cursor: pointer;
+}
+
+.user-photo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 10px;
 }
