--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -61,7 +61,32 @@
   color: white;
   border-radius: 50%;
   padding: 0px 6px;
-  font-size: 12px;
+  font-weight: bold;
+  font-size: 16px;
+}
+.signout-dropdown {
+  margin-top: 120px;
+  width: 200px;
+  border: 1px solid rgb(229, 226, 226);
+  border-radius: 5px;
+  list-style: none;
+  background: white;
+  position: absolute;
+  right: 70px;
+  top: 0;
+  z-index: 1;
+  padding: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.signout-dropdown li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  color: black;
+  padding: 8px 10px;
+  font-size: 16px;
 }
 
 @media (max-width: 1050px) {
@@ -111,4 +136,8 @@
   .navbar-menu {
     display: none;
   }
+}
+
+.None {
+  display: none;
 }
