--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,5 +1,6 @@
 .cart {
   margin-top: 200px;
+  overflow: hidden;
 }
 
 .cart-items-title {
@@ -109,20 +110,18 @@
 
 .arrow-btn {
   display: flex;
-  width: 15%;
-  justify-content: space-between;
-  position: relative;
-  left: 1000px;
-  top: 80px;
+  justify-content: end;
+  margin-top: 20px;
+  gap: 20px;
 }
 
 .arrow-btn .left-arrow,
 .arrow-btn .right-arrow {
-  font-size: 25px;
-  font-weight: bolder;
+  font-size: 20px;
+  font-weight: bold;
   background-color: rgb(225, 76, 49);
-  border-radius: 50px;
-  padding: 0px 20px;
+  border-radius: 50%;
+  padding: 6px 20px;
   color: white;
   cursor: pointer;
 }
@@ -161,6 +160,6 @@
   padding: 10px 20px;
   color: white;
   background-color: rgb(225, 76, 49);
-  border: 1px solid rgb(225, 76, 49);
+  border: 2px solid rgb(225, 76, 49);
   /* border-radius: 20px; */
 }
